Modification du fichier index.html sur toutes les balises img dont l'attribut src ne pointé pas sur les différentes images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--Cette partie contien A propos & Compétences-->
         <div class="left-container">
             <div class="about-container text-container">
-                <img src="/img/winner.PNG" alt="Isaac SOLOKO photo" />
+                <img src="img/winner.PNG" alt="Isaac SOLOKO photo" />
                 <h1>A propos de moi</h1>
                 <p>
                     Analyste et Trader Indépendant depuis le mois de juillet 2023, 
@@ -124,16 +124,16 @@
         </div>
         <div class="footer">
             <a href="#">
-                <img src="/img/social-twitter.png" alt="Twitter icon image" />
+                <img src="img/social-twitter.png" alt="Twitter icon image" />
             </a>
             <a href="https://github.com/isaacsoloko">
-                <img src="/img/social-github.png" alt="Github icon image" />
+                <img src="img/social-github.png" alt="Github icon image" />
             </a>
             <a href="#">
-                <img src="/img/social-linkedin.png" alt="Linkedin icon image" />
+                <img src="img/social-linkedin.png" alt="Linkedin icon image" />
             </a>
             <a href="https://web.facebook.com/isaac.soloko.90">
-                <img src="/img/social-facebook.png" alt="Facebook icon image" />
+                <img src="img/social-facebook.png" alt="Facebook icon image" />
             </a>
         </div>
     </body>
