--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="Portfolio" />
         <meta property="og:type" content="profile" />
-        <meta property="og:image" content="img/code.png" />
+        <meta property="og:image" content="https://isaacsoloko.github.io/portfolio/img/code.png" />
         <meta property="og:description" content="Portfolio de Isaac SOLOKO" />
         <link rel="shortcut icon" href="img/code.png" type="image/x-icon">
         <link rel="stylesheet" href="style/style.css" />
