Mise en charge de la resposive

--- a/index.html
+++ b/index.html
@@ -8,117 +8,126 @@
         <meta property="og:title" content="Portfolio" />
         <meta property="og:type" content="profile" />
         <meta property="og:image" content="https://isaacsoloko.github.io/portfolio/img/code.png" />
-        <meta property="og:description" content="Portfolio de Isaac SOLOKO" />
+        <meta property="og:description" content="My Portfolio" />
         <link rel="shortcut icon" href="img/code.png" type="image/x-icon">
-        <link rel="stylesheet" href="style/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <!--Notre nav bar-->
-        <div class="navbar">
-            <h2>My Portfolio</h2>
+        <div class="top-container">
+            <img src="img/winner.PNG" alt="Isaac SOLOKO photo" />
+            <br>
+            <h3>Bonjour, je suis Isaac SOLOKO</h3>
+            <h1>Développeur Web Full Stack</h1>
+            <p>
+                A passionate Frontend / Fullstack web developer and UI/UX.
+            </p>
+            <p>
+                enthusiast specialized in building stunning pixel-perfect interactive websites/application
+            </p>
+            <a href="#">Me contacter</a>
         </div>
-        <br><br><br><br>
-        <!--Cette partie contien A propos & Compétences-->
-        <div class="left-container">
-            <div class="about-container text-container">
-                <img src="img/winner.PNG" alt="Isaac SOLOKO photo" />
-                <h1>A propos de moi</h1>
-                <p>
-                    Analyste et Trader Indépendant depuis le mois de juillet 2023, 
-                    activité que j’exerce dans le domaine financier.
+        <div class="center-container">
+            <!--Cette partie contien A propos & Compétences-->
+            <div class="left-container">
+                <div class="text-container">
+                    <h1>A propos de moi</h1>
+                    <p>
+                        Analyste et Trader Indépendant depuis le mois de juillet 2023, 
+                        activité que j’exerce dans le domaine financier.
 
-                    Licencié en Mathémaatiques et nformatique à l’Université de Lubumbashi (UNILU), 
-                    je suis congolais né à Kilwa, le 24 avril 1996 dans la province du Haut-Katanga 
-                    plus précisément  dans le Territoire de Pweto.
-                </p>
+                        Licencié en Mathémaatiques et nformatique à l’Université de Lubumbashi (UNILU), 
+                        je suis congolais né à Kilwa, le 24 avril 1996 dans la province du Haut-Katanga 
+                        plus précisément  dans le Territoire de Pweto.
+                    </p>
+                </div>
+                <div class="text-container">
+                    <h1>Mes compétences</h1>
+                    <ul role="list">
+                        <li>Analyse et conception des systèmes informatique avec UML</li>
+                        <li>Développement web Full Stack</li>
+                        <li>Analyse des marchés boursiers</li>
+                        <li>Développement web Full Stack</li>
+                        <li>Traitement de texte avec LaTex</li>
+                        <li>Microsoft Office</li>
+                    </ul>
+                </div>
             </div>
-            <div class="competences-container text-container">
-                <h1>Mes compétences</h1>
-                <ul role="list">
-                    <li>Analyse et conception des systèmes informatique avec UML</li>
-                    <li>Développement web Full Stack</li>
-                    <li>Analyse des marchés boursiers</li>
-                    <li>Développement web Full Stack</li>
-                    <li>Traitement de texte avec LaTex</li>
-                    <li>Microsoft Office</li>
-                </ul>
-            </div>
-        </div>
-        <!--Cette partie contien Expériences & Educations-->
-        <div class="right-container">
-            <div class="experiences-container text-container">
-                <h1>Expériences professionnelles</h1>
-                <ul role="list">
-                    <li>
-                        <b>2023 à Lubumbashi : </b>Agent temporaire à la Commission Electorale Nationale Indépendante (CENI) 
-                        lors de la Révision du Fichier Electoral (RFE) en tant qu'Opérateur de saisie.
-                    </li>
-                    <li>
-                        <b>2021 à Lubumbashi : </b>IT stagiaire au département informatique à la RAWBANK 
-                        (Direction provinciale du grand Katanga).
-                    </li>
-                    <li>
-                        <b>2014 à Kipushi : </b>Mécanicien stagiaire chez KICO IVAN PLAT.
-                    </li>
-                    <li>
-                        <b>2012 à Lubumbashi : </b>Mécanicien stagiaire à l'INPP.
-                    </li>
-                </ul>
-            </div>
-            <div class="education-container text-container">
-                <h1>Educations</h1>
-                <ul role="list">
-                    <li>
-                        <b>Octobre 2015 - Octobre 2021 : Etudes universitaires</b>
-                        <ul>
-                            <li>
-                                <b>Institut : </b>Université de Lubumbashi (UNILU)
-                            </li>
-                            <li>
-                                <b>Faculté : </b>Sciences
-                            </li>
-                            <li>
-                                <b>Département : </b>Mathémaatiques et informatique
-                            </li>
-                            <li>
-                                <b>Option : </b>Math-info
-                            </li>
-                            <li>
-                                <b>Projet de fin d'études : </b>Conception et réalisation 
-                                d'un système informatique d'envoie des messages d'alertes. 
-                                (Cas du Gouvernement Provincial du Haut-Katanga)
-                            </li>
-                            <li>
-                                <b>Pièce obtenue : </b> Diplôme de licence (BAC + 3)
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <b>Septembre 2009 - Juin 2015 : Etudes humanitaires</b>
-                        <ul>
-                            <li>
-                                <b>Institut : </b>C.S Saint JACQUES VERNONT 1
-                            </li>
-                            <li>
-                                <b>Option : </b>Mécanique générale
-                            </li>
-                            <li>
-                                <b>Pièce obtenue : </b> Diplôme d'Etat
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <b>Septembre 2003 - Juin 2009 : Etudes primaires</b>
-                        <ul>
-                            <li>
-                                <b>Institut : </b>E.P Umoja
-                            </li>
-                            <li>
-                                <b>Pièce obtenue : </b> Certificat d'études primaires
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+            <!--Cette partie contien Expériences & Educations-->
+            <div class="right-container">
+                <div class="text-container">
+                    <h1>Expériences professionnelles</h1>
+                    <ul role="list">
+                        <li>
+                            <b>2023 à Lubumbashi : </b>Agent temporaire à la Commission Electorale Nationale Indépendante (CENI) 
+                            lors de la Révision du Fichier Electoral (RFE) en tant qu'Opérateur de saisie.
+                        </li>
+                        <li>
+                            <b>2021 à Lubumbashi : </b>IT stagiaire au département informatique à la RAWBANK 
+                            (Direction provinciale du grand Katanga).
+                        </li>
+                        <li>
+                            <b>2014 à Kipushi : </b>Mécanicien stagiaire chez KICO IVAN PLAT.
+                        </li>
+                        <li>
+                            <b>2012 à Lubumbashi : </b>Mécanicien stagiaire à l'INPP.
+                        </li>
+                    </ul>
+                </div>
+                <div class="text-container">
+                    <h1>Educations</h1>
+                    <ul role="list">
+                        <li>
+                            <b>Octobre 2015 - Octobre 2021 : Etudes universitaires</b>
+                            <ul>
+                                <li>
+                                    <b>Institut : </b>Université de Lubumbashi (UNILU)
+                                </li>
+                                <li>
+                                    <b>Faculté : </b>Sciences
+                                </li>
+                                <li>
+                                    <b>Département : </b>Mathémaatiques et informatique
+                                </li>
+                                <li>
+                                    <b>Option : </b>Math-info
+                                </li>
+                                <li>
+                                    <b>Projet de fin d'études : </b>Conception et réalisation 
+                                    d'un système informatique d'envoie des messages d'alertes. 
+                                    (Cas du Gouvernement Provincial du Haut-Katanga)
+                                </li>
+                                <li>
+                                    <b>Pièce obtenue : </b> Diplôme de licence (BAC + 3)
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <b>Septembre 2009 - Juin 2015 : Etudes humanitaires</b>
+                            <ul>
+                                <li>
+                                    <b>Institut : </b>C.S Saint JACQUES VERNONT 1
+                                </li>
+                                <li>
+                                    <b>Option : </b>Mécanique générale
+                                </li>
+                                <li>
+                                    <b>Pièce obtenue : </b> Diplôme d'Etat
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <b>Septembre 2003 - Juin 2009 : Etudes primaires</b>
+                            <ul>
+                                <li>
+                                    <b>Institut : </b>E.P Umoja
+                                </li>
+                                <li>
+                                    <b>Pièce obtenue : </b> Certificat d'études primaires
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer">
