--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Portfolio" />
         <meta property="og:type" content="profile" />
         <meta property="og:image" content="https://isaacsoloko.github.io/portfolio/img/code.png" />
-        <meta property="og:description" content="My Portfolio" />
+        <meta property="og:description" content="My Portfolio web site" />
         <link rel="shortcut icon" href="img/code.png" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css" />
     </head>
@@ -46,7 +46,7 @@
                         <li>Analyse et conception des systèmes informatique avec UML</li>
                         <li>Développement web Full Stack</li>
                         <li>Analyse des marchés boursiers</li>
-                        <li>Développement web Full Stack</li>
+                        <li>Développement mobile avec React Native</li>
                         <li>Traitement de texte avec LaTex</li>
                         <li>Microsoft Office</li>
                     </ul>
